# emag-fridge-bot

./: .gitignore  README.md  pyproject.toml
emag/: __main__.py
