[tool.poetry]
name = "emag"
version = "0.1.0"
description = ""
authors = ["Mircea Mihalea <mircea@mihalea.ro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.2"
requests = "^2.32.3"
requests-cache = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
